--- a/website/templates/login.html
+++ b/website/templates/login.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
 
 {% block title %}
-  Changed Title
+  Login
 {% endblock %}
 
 {% block content %}
-  <h1>This is the home page</h1>
+  <h1>This is the Login page</h1>
 {% endblock %}
