--- a/website/templates/sign_up.html
+++ b/website/templates/sign_up.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
 
 {% block title %}
-  Changed Title
+  SignUp
 {% endblock %}
 
 {% block content %}
-  <h1>This is the home page</h1>
+  <h1>This is the SignUp page</h1>
 {% endblock %}
