--- a/website/templates/sign_up.html
+++ b/website/templates/sign_up.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block content %}
-  <form action="POST">
+  <form method="POST">
     <h3 align="center">Sign-Up</h3>
     <div class="form-group">
       <label for="email">Email address</label>
